# ai-crawling-strategist

./: README.md  pyproject.toml
docs/: dev-requirements.md  implementation-plan.md  robustness-enhancements.md
src/ai_crawling_strategist/: __init__.py  config.py  exceptions.py
src/ai_crawling_strategist/auth/: __doc__.md  __init__.py  credentials.py  profile_manager.py
src/ai_crawling_strategist/core/: __doc__.md  __init__.py  chunker.py  memory_manager.py  schema_generator.py  strategist.py
src/ai_crawling_strategist/llm/: __doc__.md  __init__.py  claude_client.py  prompt_templates.py  response_validator.py
src/ai_crawling_strategist/llm/templates/: chunk_analysis.yaml  schema_generation.yaml
src/ai_crawling_strategist/models/: __doc__.md  __init__.py  chunks.py  extraction.py  memory.py
src/ai_crawling_strategist/preprocessing/: __doc__.md  __init__.py  dom_parser.py  html_cleaner.py
tests/integration/: test_simple_integration.py
