[project]
name = "narrative-crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "cywujeremy",email = "chengyuwu8193@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "openai (>=1.93.0,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "selenium (>=4.34.0,<5.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "boto3 (>=1.39.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.0.0"
pytest-xdist = "^3.8.0"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
isort = "^6.0.1"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
pytest-selenium = "^4.1.0"

